--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
-    "animejs": "^4.0.2",
     "framer-motion": "^12.19.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "quill": "^2.0.3",
+    "quill-task-list": "^1.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
