--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.19.2",
     "quill": "^2.0.3",
     "quill-task-list": "^1.1.0",
